fix(Radio): Radio and checkbox not properly aligned (#1655)
Replaced margin-inline with margin-right to left align elements

--- a/packages/react/src/components/form/Checkbox/Checkbox.module.css
+++ b/packages/react/src/components/form/Checkbox/Checkbox.module.css
@@ -26,7 +26,7 @@
   box-shadow: inset 0 0 0 2px var(--fds-checkbox-border-color);
   background: var(--fds-checkbox-background);
   flex-shrink: 0;
-  margin-inline: 6px;
+  margin-right: 6px;
   margin-block: 6px;
   border-radius: var(--fds-border_radius-medium);
 }
